# knowledge-gateway

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  server.json  tokens.example.yaml  vaults.example.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: auto-update.sh  obsidian-gateway-update.service  obsidian-gateway.service  tailscale.md
gateway/: __init__.py  acl.py  config.py  detect.py  edits.py  gitops.py  graph.py  links.py  locks.py  search.py  server.py  tags.py  tools.py  vaults.py  writes.py
gateway/codegraph/: build.py  cli.py  extract_ansible.py  extract_python.py  resolve.py  treesitter.py
tests/: test_acl.py  test_attachments.py  test_canvas.py  test_codegraph.py  test_codegraph_resolve.py  test_config.py  test_detect.py  test_edits.py  test_local.py  test_treesitter.py  test_vaults.py  test_writes.py
